[project]
name = "leetcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "mypy>=1.18.2",
    "nbconvert>=7.16.6",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "ruff>=0.14.0",
]
